--- a/geo_data_preprocessing.ipynb
+++ b/geo_data_preprocessing.ipynb
@@ -579,7 +579,7 @@
     "house_geo_df = pd.concat([house_geo, house_geo_google], axis = 0) \n",
     "house_geo_df.reset_index(inplace=True, drop=True)\n",
     "\n",
-    "house_geo_df.to_csv('jeonnam_geo.csv', encoding='cp949', index=False)"
+    "house_geo_df.to_csv('./data/jeonnam_geo.csv', encoding='cp949', index=False)"
    ]
   },
   {
@@ -596,8 +596,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bank_jeonnam = pd.read_csv('bank_전남.csv',encoding='cp949')\n",
-    "public_jeonnam = pd.read_csv('jeonnam_geo.csv',encoding='cp949')"
+    "bank_jeonnam = pd.read_csv('./data/bank_전남.csv',encoding='cp949')\n",
+    "public_jeonnam = pd.read_csv('./data/jeonnam_geo.csv',encoding='cp949')"
    ]
   },
   {
@@ -775,7 +775,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jeonnam_transition_notna.to_csv('jeonnam_transition.csv',encoding='cp949',index=False)"
+    "jeonnam_transition_notna.to_csv('./data/jeonnam_transition.csv',encoding='cp949',index=False)"
    ]
   },
   {
@@ -791,8 +791,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jeonnam_transition = pd.read_csv('jeonnam_transition.csv',encoding='cp949')\n",
-    "bank_jeonnam = pd.read_csv('bank_전남.csv',encoding='cp949')"
+    "jeonnam_transition = pd.read_csv('./data/jeonnam_transition.csv',encoding='cp949')\n",
+    "bank_jeonnam = pd.read_csv('./data/bank_전남.csv',encoding='cp949')"
    ]
   },
   {
@@ -839,7 +839,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jeonnam_transition.to_csv('jeonnam_final.csv',encoding='cp949', index=False)"
+    "jeonnam_transition.to_csv('./data/jeonnam_transition.csv',encoding='cp949', index=False)"
    ]
   },
   {
@@ -851,236 +851,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['법정동코드', '기준연월', '시도명', '시군구명', '읍면동명', '리명', '계', '남자', '여자', '0세남자',\n",
-       "       ...\n",
-       "       '101세여자', '102세여자', '103세여자', '104세여자', '105세여자', '106세여자', '107세여자',\n",
-       "       '108세여자', '109세여자', '110세이상 여자'],\n",
-       "      dtype='object', length=231)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# 총 읍면동 별 인구 데이터 불러오기\n",
-    "raw_pop = pd.read_csv('./data/전국_202401_70세_이상_인구통계_법정동.csv', encoding='utf-8-sig')\n",
-    "raw_pop.columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 필요한 컬럼/행 추출"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 전남 데이터만 추출\n",
-    "raw_pop = raw_pop[raw_pop['시도명'].str.contains('전라남도')]\n",
-    "\n",
-    "# 70세 이상 남, 녀, 총 데이터만 추출\n",
-    "raw_pop['70세이상 남자'] = raw_pop.loc[:,'70세남자':'110세이상 남자'].sum(axis=1)\n",
-    "raw_pop['70세이상 여자'] = raw_pop.loc[:,'70세여자':'110세이상 여자'].sum(axis=1)\n",
-    "raw_pop['70세이상 계'] = raw_pop['70세이상 남자'] + raw_pop['70세이상 여자']\n",
-    "\n",
-    "# 필요한 열들만 추출\n",
-    "interested_columns = ['법정동코드', '시도명', '시군구명', '읍면동명', '리명', '계', '70세이상 계']\n",
-    "\n",
-    "# 전남 데이터프레임 생성\n",
-    "df_pop = raw_pop[interested_columns]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 70세이상 인구비율 계산"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 70세 이상 인구 비율 계산\n",
-    "df_pop['70세이상 인구비율'] = df_pop['70세이상 계'] / df_pop['계'] * 100"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "지금의 데이터는 읍면동-리 까지 구분이 되어있기 때문에, 동일한 기준 적용을 위해 읍면동까지만 구분된 인구 데이터도 계산해 준다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 읍면동 기준의 총인구 및 70세이상 인구 계산\n",
-    "df_pop[['읍면동 총인구', '읍면동 70세이상 인구']] = df_pop.groupby(['시도명', '시군구명', '읍면동명'])[['계', '70세이상 계']].transform('sum')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>법정동코드</th>\n",
-       "      <th>시도명</th>\n",
-       "      <th>시군구명</th>\n",
-       "      <th>읍면동명</th>\n",
-       "      <th>리명</th>\n",
-       "      <th>읍면동리 총인구</th>\n",
-       "      <th>읍면동리 70세이상 인구</th>\n",
-       "      <th>읍면동리 70세이상 인구비율</th>\n",
-       "      <th>읍면동 총인구</th>\n",
-       "      <th>읍면동 70세이상 인구</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>7569</th>\n",
-       "      <td>4611010100</td>\n",
-       "      <td>전라남도</td>\n",
-       "      <td>목포시</td>\n",
-       "      <td>용당동</td>\n",
-       "      <td>용당동</td>\n",
-       "      <td>12477</td>\n",
-       "      <td>3024</td>\n",
-       "      <td>24.236595</td>\n",
-       "      <td>12477</td>\n",
-       "      <td>3024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7570</th>\n",
-       "      <td>4611010200</td>\n",
-       "      <td>전라남도</td>\n",
-       "      <td>목포시</td>\n",
-       "      <td>산정동</td>\n",
-       "      <td>산정동</td>\n",
-       "      <td>41280</td>\n",
-       "      <td>7389</td>\n",
-       "      <td>17.899709</td>\n",
-       "      <td>41280</td>\n",
-       "      <td>7389</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7571</th>\n",
-       "      <td>4611010300</td>\n",
-       "      <td>전라남도</td>\n",
-       "      <td>목포시</td>\n",
-       "      <td>연산동</td>\n",
-       "      <td>연산동</td>\n",
-       "      <td>13039</td>\n",
-       "      <td>1129</td>\n",
-       "      <td>8.658639</td>\n",
-       "      <td>13039</td>\n",
-       "      <td>1129</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7572</th>\n",
-       "      <td>4611010400</td>\n",
-       "      <td>전라남도</td>\n",
-       "      <td>목포시</td>\n",
-       "      <td>대성동</td>\n",
-       "      <td>대성동</td>\n",
-       "      <td>3899</td>\n",
-       "      <td>525</td>\n",
-       "      <td>13.464991</td>\n",
-       "      <td>3899</td>\n",
-       "      <td>525</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7573</th>\n",
-       "      <td>4611010500</td>\n",
-       "      <td>전라남도</td>\n",
-       "      <td>목포시</td>\n",
-       "      <td>양동</td>\n",
-       "      <td>양동</td>\n",
-       "      <td>1318</td>\n",
-       "      <td>365</td>\n",
-       "      <td>27.693475</td>\n",
-       "      <td>1318</td>\n",
-       "      <td>365</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           법정동코드   시도명 시군구명 읍면동명   리명  읍면동리 총인구  읍면동리 70세이상 인구  \\\n",
-       "7569  4611010100  전라남도  목포시  용당동  용당동     12477           3024   \n",
-       "7570  4611010200  전라남도  목포시  산정동  산정동     41280           7389   \n",
-       "7571  4611010300  전라남도  목포시  연산동  연산동     13039           1129   \n",
-       "7572  4611010400  전라남도  목포시  대성동  대성동      3899            525   \n",
-       "7573  4611010500  전라남도  목포시   양동   양동      1318            365   \n",
-       "\n",
-       "       읍면동리 70세이상 인구비율  읍면동 총인구  읍면동 70세이상 인구  \n",
-       "7569         24.236595    12477          3024  \n",
-       "7570         17.899709    41280          7389  \n",
-       "7571          8.658639    13039          1129  \n",
-       "7572         13.464991     3899           525  \n",
-       "7573         27.693475     1318           365  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# 컬럼명 변환\n",
-    "df_pop.columns = ['법정동코드', '시도명', '시군구명', '읍면동명', '리명', \n",
-    "                      '읍면동리 총인구', '읍면동리 70세이상 인구', ' 읍면동리 70세이상 인구비율',\n",
-    "                      '읍면동 총인구', '읍면동 70세이상 인구']\n",
-    "\n",
-    "# 최종 데이터프레임 확인\n",
-    "df_pop.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final = pd.merge(jeonnam_transition, df_pop[['법정동 총 인구','법정동 70세이상 인구비율','주소별 추정 인구수','주소']], left_on='address', right_on='주소', how='inner')"
+    "# 이전 데이터 불러오기\n",
+    "jeonnam_transition = pd.read_csv('./data/jeonnam_transition.csv',encoding='cp949')"
    ]
   },
   {
@@ -1089,7 +865,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final.to_csv('jeonnam_final_jjin.csv', encoding='cp949', index=False)"
+    "# 필요한 컬럼만 추출\n",
+    "jeonnam_transition = jeonnam_transition[['address', 'latitude', 'longitude', 'closeness', 'distance', 'total_mins', \n",
+    "                                        '1km_radius', '1.5km_radius', '2km_radius', '2.5km_radius', '3km_radius', '5km_radius', '10km_radius']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전처리 완료한 전라남도 인구 데이터 불러오기\n",
+    "df_pop = pd.read_csv('./data/jeonnam_pop.csv', encoding='cp949')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 인구데이터를 병합\n",
+    "df_final = pd.merge(jeonnam_transition, df_pop, left_on='address', right_on='주소', how='inner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 최종 데이터를 Parquet 파일로 저장\n",
+    "df_final.to_parquet('./data/jeonnam_final.parquet', index=False)"
    ]
   }
  ],
