Added economic_data_preprocessing.ipynb as well as relevant data files.

--- a/housing_data_preprocessing.ipynb
+++ b/housing_data_preprocessing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -210,64 +210,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>255603</th>\n",
-       "      <td>4682033032111400001</td>\n",
-       "      <td>4682033032</td>\n",
-       "      <td>전라남도 해남군 현산면 월송리</td>\n",
+       "      <th>91464</th>\n",
+       "      <td>4617025022101210000</td>\n",
+       "      <td>4617025022</td>\n",
+       "      <td>전라남도 나주시 남평읍 대교리</td>\n",
        "      <td>1</td>\n",
        "      <td>일반</td>\n",
-       "      <td>1140-1</td>\n",
-       "      <td>1140</td>\n",
-       "      <td>전라남도 해남군 현산면 월송리 1140-1</td>\n",
-       "      <td>147.88</td>\n",
+       "      <td>121</td>\n",
+       "      <td>121</td>\n",
+       "      <td>전라남도 나주시 남평읍 대교리 121</td>\n",
+       "      <td>111.27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>150237</th>\n",
-       "      <td>4673025022100070002</td>\n",
-       "      <td>4673025022</td>\n",
-       "      <td>전라남도 구례군 구례읍 봉남리</td>\n",
+       "      <th>40030</th>\n",
+       "      <td>4613014700100640004</td>\n",
+       "      <td>4613014700</td>\n",
+       "      <td>전라남도 여수시 묘도동</td>\n",
        "      <td>1</td>\n",
        "      <td>일반</td>\n",
-       "      <td>7-2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>전라남도 구례군 구례읍 봉남리 7-2</td>\n",
-       "      <td>439.86</td>\n",
+       "      <td>64-4</td>\n",
+       "      <td>64</td>\n",
+       "      <td>전라남도 여수시 묘도동 64-4</td>\n",
+       "      <td>55.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>243434</th>\n",
-       "      <td>4681036024100350005</td>\n",
-       "      <td>4681036024</td>\n",
-       "      <td>전라남도 강진군 성전면 월평리</td>\n",
+       "      <th>197606</th>\n",
+       "      <td>4678034027105180000</td>\n",
+       "      <td>4678034027</td>\n",
+       "      <td>전라남도 보성군 율어면 이동리</td>\n",
        "      <td>1</td>\n",
        "      <td>일반</td>\n",
-       "      <td>35-5</td>\n",
-       "      <td>35</td>\n",
-       "      <td>전라남도 강진군 성전면 월평리 35-5</td>\n",
-       "      <td>181.90</td>\n",
+       "      <td>518</td>\n",
+       "      <td>518</td>\n",
+       "      <td>전라남도 보성군 율어면 이동리 518</td>\n",
+       "      <td>57.41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>300876</th>\n",
-       "      <td>4684035023105760132</td>\n",
-       "      <td>4684035023</td>\n",
-       "      <td>전라남도 무안군 망운면 피서리</td>\n",
+       "      <th>99448</th>\n",
+       "      <td>4617036022101600001</td>\n",
+       "      <td>4617036022</td>\n",
+       "      <td>전라남도 나주시 다시면 월태리</td>\n",
        "      <td>1</td>\n",
        "      <td>일반</td>\n",
-       "      <td>576-132</td>\n",
-       "      <td>576</td>\n",
-       "      <td>전라남도 무안군 망운면 피서리 576-132</td>\n",
-       "      <td>191.50</td>\n",
+       "      <td>160-1</td>\n",
+       "      <td>160</td>\n",
+       "      <td>전라남도 나주시 다시면 월태리 160-1</td>\n",
+       "      <td>75.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>374986</th>\n",
-       "      <td>4691025331104670024</td>\n",
-       "      <td>4691025331</td>\n",
-       "      <td>전라남도 신안군 압해읍 신장리</td>\n",
+       "      <th>103786</th>\n",
+       "      <td>4617038030101230001</td>\n",
+       "      <td>4617038030</td>\n",
+       "      <td>전라남도 나주시 노안면 영평리</td>\n",
        "      <td>1</td>\n",
        "      <td>일반</td>\n",
-       "      <td>467-24</td>\n",
-       "      <td>467</td>\n",
-       "      <td>전라남도 신안군 압해읍 신장리 467-24</td>\n",
-       "      <td>62.20</td>\n",
+       "      <td>123-1</td>\n",
+       "      <td>123</td>\n",
+       "      <td>전라남도 나주시 노안면 영평리 123-1</td>\n",
+       "      <td>87.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -275,21 +275,21 @@
       ],
       "text/plain": [
        "                       고유번호       법정동코드              법정동명  특수지구분코드 특수지구분명  \\\n",
-       "255603  4682033032111400001  4682033032  전라남도 해남군 현산면 월송리        1     일반   \n",
-       "150237  4673025022100070002  4673025022  전라남도 구례군 구례읍 봉남리        1     일반   \n",
-       "243434  4681036024100350005  4681036024  전라남도 강진군 성전면 월평리        1     일반   \n",
-       "300876  4684035023105760132  4684035023  전라남도 무안군 망운면 피서리        1     일반   \n",
-       "374986  4691025331104670024  4691025331  전라남도 신안군 압해읍 신장리        1     일반   \n",
+       "91464   4617025022101210000  4617025022  전라남도 나주시 남평읍 대교리        1     일반   \n",
+       "40030   4613014700100640004  4613014700      전라남도 여수시 묘도동        1     일반   \n",
+       "197606  4678034027105180000  4678034027  전라남도 보성군 율어면 이동리        1     일반   \n",
+       "99448   4617036022101600001  4617036022  전라남도 나주시 다시면 월태리        1     일반   \n",
+       "103786  4617038030101230001  4617038030  전라남도 나주시 노안면 영평리        1     일반   \n",
        "\n",
-       "             지번  지번본번                        주소  지번별 연면적  \n",
-       "255603   1140-1  1140   전라남도 해남군 현산면 월송리 1140-1   147.88  \n",
-       "150237      7-2     7      전라남도 구례군 구례읍 봉남리 7-2   439.86  \n",
-       "243434     35-5    35     전라남도 강진군 성전면 월평리 35-5   181.90  \n",
-       "300876  576-132   576  전라남도 무안군 망운면 피서리 576-132   191.50  \n",
-       "374986   467-24   467   전라남도 신안군 압해읍 신장리 467-24    62.20  "
+       "           지번 지번본번                      주소  지번별 연면적  \n",
+       "91464     121  121    전라남도 나주시 남평읍 대교리 121   111.27  \n",
+       "40030    64-4   64       전라남도 여수시 묘도동 64-4    55.00  \n",
+       "197606    518  518    전라남도 보성군 율어면 이동리 518    57.41  \n",
+       "99448   160-1  160  전라남도 나주시 다시면 월태리 160-1    75.80  \n",
+       "103786  123-1  123  전라남도 나주시 노안면 영평리 123-1    87.00  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "max    226185.570000    6672.140708"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "      dtype='object', length=231)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -651,15 +651,15 @@
        "7572  4611010400  전라남도  목포시  대성동  대성동      3899            525   \n",
        "7573  4611010500  전라남도  목포시   양동   양동      1318            365   \n",
        "\n",
-       "       읍면동리 70세이상 인구비율  읍면동 총인구  읍면동 70세이상 인구  \n",
-       "7569         24.236595    12477          3024  \n",
-       "7570         17.899709    41280          7389  \n",
-       "7571          8.658639    13039          1129  \n",
-       "7572         13.464991     3899           525  \n",
-       "7573         27.693475     1318           365  "
+       "      읍면동리 70세이상 인구비율  읍면동 총인구  읍면동 70세이상 인구  \n",
+       "7569        24.236595    12477          3024  \n",
+       "7570        17.899709    41280          7389  \n",
+       "7571         8.658639    13039          1129  \n",
+       "7572        13.464991     3899           525  \n",
+       "7573        27.693475     1318           365  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,8 +667,8 @@
    "source": [
     "# 컬럼명 변환\n",
     "df_pop.columns = ['법정동코드', '시도명', '시군구명', '읍면동명', '리명', \n",
-    "                      '읍면동리 총인구', '읍면동리 70세이상 인구', ' 읍면동리 70세이상 인구비율',\n",
-    "                      '읍면동 총인구', '읍면동 70세이상 인구']\n",
+    "                  '읍면동리 총인구', '읍면동리 70세이상 인구', '읍면동리 70세이상 인구비율',\n",
+    "                  '읍면동 총인구', '읍면동 70세이상 인구']\n",
     "\n",
     "# 최종 데이터프레임 확인\n",
     "df_pop.head()"
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -834,12 +834,12 @@
        "3  4611010100101710040  4611010100  171-40  전라남도 목포시 용당동 171-40    84.69   \n",
        "4  4611010100101710041  4611010100  171-41  전라남도 목포시 용당동 171-41    81.96   \n",
        "\n",
-       "   지번별 추정 인구수   시도명 시군구명 읍면동명   리명  읍면동리 총인구  읍면동리 70세이상 인구   읍면동리 70세이상 인구비율  \\\n",
-       "0    1.912684  전라남도  목포시  용당동  용당동   12477.0         3024.0         24.236595   \n",
-       "1    2.512979  전라남도  목포시  용당동  용당동   12477.0         3024.0         24.236595   \n",
-       "2    3.537758  전라남도  목포시  용당동  용당동   12477.0         3024.0         24.236595   \n",
-       "3    2.498230  전라남도  목포시  용당동  용당동   12477.0         3024.0         24.236595   \n",
-       "4    2.417699  전라남도  목포시  용당동  용당동   12477.0         3024.0         24.236595   \n",
+       "   지번별 추정 인구수   시도명 시군구명 읍면동명   리명  읍면동리 총인구  읍면동리 70세이상 인구  읍면동리 70세이상 인구비율  \\\n",
+       "0    1.912684  전라남도  목포시  용당동  용당동   12477.0         3024.0        24.236595   \n",
+       "1    2.512979  전라남도  목포시  용당동  용당동   12477.0         3024.0        24.236595   \n",
+       "2    3.537758  전라남도  목포시  용당동  용당동   12477.0         3024.0        24.236595   \n",
+       "3    2.498230  전라남도  목포시  용당동  용당동   12477.0         3024.0        24.236595   \n",
+       "4    2.417699  전라남도  목포시  용당동  용당동   12477.0         3024.0        24.236595   \n",
        "\n",
        "   읍면동 총인구  읍면동 70세이상 인구  \n",
        "0  12477.0        3024.0  \n",
@@ -849,7 +849,7 @@
        "4  12477.0        3024.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -954,12 +954,12 @@
        "329331    4.625369  NaN  NaN  NaN  NaN       NaN            NaN   \n",
        "336519    7.494985  NaN  NaN  NaN  NaN       NaN            NaN   \n",
        "\n",
-       "         읍면동리 70세이상 인구비율  읍면동 총인구  읍면동 70세이상 인구  \n",
-       "329331               NaN      NaN           NaN  \n",
-       "336519               NaN      NaN           NaN  "
+       "        읍면동리 70세이상 인구비율  읍면동 총인구  읍면동 70세이상 인구  \n",
+       "329331              NaN      NaN           NaN  \n",
+       "336519              NaN      NaN           NaN  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1077,12 +1077,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 탐색 완료한 데이터 저장\n",
-    "df_merged.to_csv('./data/jeonnam_pop.csv', encoding='cp949', index=False)"
+    "df_merged.to_parquet('./data/jeonnam_pop.parquet')"
    ]
   },
   {
