--- a/geo_data_preprocessing.ipynb
+++ b/geo_data_preprocessing.ipynb
@@ -468,6 +468,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 2. 주택"
    ]
   },
@@ -580,6 +587,13 @@
     "house_geo_df.reset_index(inplace=True, drop=True)\n",
     "\n",
     "house_geo_df.to_csv('./data/jeonnam_geo.csv', encoding='cp949', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -782,6 +796,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 4. 반경 내 은행 개수 구하기"
    ]
   },
@@ -846,12 +867,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. 인구 데이터랑 합치기\n"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. 인구 데이터랑 합치기\n",
+    "*여기서 부터 코드 실행하시면 됩니다.*\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,17 +901,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전처리 완료한 전라남도 인구 데이터 불러오기\n",
-    "df_pop = pd.read_csv('./data/jeonnam_pop.csv', encoding='cp949')"
+    "df_pop = pd.read_parquet('./data/jeonnam_pop.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,12 +921,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 최종 데이터를 Parquet 파일로 저장\n",
     "df_final.to_parquet('./data/jeonnam_final.parquet', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---"
    ]
   }
  ],
