Reformatted DBSCAN_cluster_analysis.ipynb file

--- a/economic_data_preprocessing.ipynb
+++ b/economic_data_preprocessing.ipynb
@@ -576,6 +576,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데이터 저장\n",
+    "df_remapped.to_parquet('./data/jeonnam_clustered_mapped_ADMadd.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
@@ -1109,38 +1119,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 행정동별 경제지표 데이터 병합"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 행정읍면동명을 기준으로 데이터 병합\n",
-    "df_merged = pd.merge(df_remapped, df_selected, left_on='행정읍면동명', right_on='행정구역(읍면동)', how='left')\n",
-    "df_merged.drop('행정구역(읍면동)', axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 데이터 저장\n",
-    "df_merged.to_parquet('./data/jeonnam_clustered_econ.parquet')"
+    "# 전처리된 경제 데이터 저장\n",
+    "df_selected.to_csv('./data/jeonnam_econ.csv', encoding='cp949', index=False)"
    ]
   },
   {
